--- a/Tarea11_Diego.csproj
+++ b/Tarea11_Diego.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Arquitecto.cs" />
     <Compile Include="Constructor.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
